--- a/src/views/nav.html
+++ b/src/views/nav.html
@@ -2,6 +2,7 @@
 	<ul>
 		<li><a href="/pageA">Home</a></li>
 		<li><a href="/pageB">echarts指令</a></li>
-		<li><a href="/pageC">组件库</a></li>
+		<li><a href="/pageC">组件库A</a></li>
+		<li><a href="/pageD">组件库B</a></li>
 	</ul>
 </nav>
