--- a/src/views/app.html
+++ b/src/views/app.html
@@ -2,7 +2,7 @@
   <h1 class="title">Hello from Angular !</h1>
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="../img/logo.png">
+  <img src="img/logo.png">
 </main>
 <footer>
   <a ng-href="{{aaaCtrl.url}}">Webpack Angular Starter</a>
