--- a/src/views/nav.html
+++ b/src/views/nav.html
@@ -1,9 +1,9 @@
 <nav class="clearfix">
 	<ul>
-		<li><a href="#pageA">Home</a></li>
-		<li><a href="#pageB">echarts指令</a></li>
-		<li><a href="#pageC">组件库A</a></li>
-		<li><a href="#pageD">组件库B</a></li>
-		<li><a href="#pageE">Table组件</a></li>
+		<li><a href="pageA">Home</a></li>
+		<li><a href="pageB">echarts指令</a></li>
+		<li><a href="pageC">组件库A</a></li>
+		<li><a href="pageD">组件库B</a></li>
+		<li><a href="pageE">Table组件</a></li>
 	</ul>
 </nav>
